--- a/.github/workflows/user.yaml
+++ b/.github/workflows/user.yaml
@@ -11,7 +11,7 @@ jobs:
         name: sync folder
         with:
           command: sync
-          source: ${{ secrets.S3_BUCKET }}
+          source: ${{ secrets.AWS_BUCKET }}
           destination: ./sharedflows/
           aws_access_key_id: ${{ secrets.AWS_ACCESS_KEY_ID }}
           aws_secret_access_key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
