--- a/.github/workflows/user.yaml
+++ b/.github/workflows/user.yaml
@@ -7,17 +7,15 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
-      - uses: keithweaver/aws-s3-github-action@v1.0.0 # Verifies the recursive flag
-        name: sync folder
+      - name: Copy a file from s3
+        uses: prewk/s3-cp-action@v2
         with:
-          command: sync
-          source: ${{ secrets.AWS_BUCKET }}
-          destination: ./sharedflows/
           aws_access_key_id: ${{ secrets.AWS_ACCESS_KEY_ID }}
           aws_secret_access_key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-          aws_region: ${{ secrets.AWS_REGION }}
+          source: 's3://sharedflows/artifacts/workflows/reusable_action.yaml'
+          dest: 'reusable_action.yaml'
       - name: Check downloads
-        run: ls -lah ./sharedflows/
+        run: ls -lah
   call-workflow-passing-data:
     uses: ./.github/workflows/reusable_action.yaml
     with:
