call remotely through S3

--- a/.github/workflows/user.yaml
+++ b/.github/workflows/user.yaml
@@ -20,3 +20,5 @@ jobs:
     uses: ./.github/workflows/reusable_action.yaml
     with:
       param1: Jason
+    secrets:
+      token: ${{ secrets.GH_PAT }}
