--- a/.github/workflows/reusable_action.yaml
+++ b/.github/workflows/reusable_action.yaml
@@ -6,6 +6,9 @@ on:
       param1:
         required: true
         type: string
+    secrets:
+      token:
+        required: true
 
 jobs:
   reusable:
@@ -15,5 +18,6 @@ jobs:
         uses: actions/checkout@v3
         with:
           repository: private-actions-users-club/priv-action
+          token: ${{ secrets.token }}
       - name: reusable flow step
         run: echo "Hello, reusable!"
